# PerfCat

./: .gitignore  README.md  autocommit.py  game.js  main.js  project.config.json
background/: build.gradle  gradle.properties  settings.gradle
background/apicompat/: build.gradle
background/app/: CMakeLists.txt  build.gradle
background/app/src/androidTest/java/com/unity/uprtech/: ExampleInstrumentedTest.java
background/app/src/main/: AndroidManifest.xml
background/app/src/main/java/com/unity/uprtech/: MainActivity.java  PerfCat.java
background/app/src/main/java/com/unity/uprtech/nativemodules/: NativeWrappers.java
background/app/src/main/java/com/unity/uprtech/service/: BatteryService.java  CpuService.java  GpuService.java  MemoryService.java
background/app/src/main/java/com/unity/uprtech/service/proxy/: IActivityManagerProxy.java
background/app/src/main/native/HWCPipe/: CMakeLists.txt  hwcpipe.cpp  hwcpipe.h
background/app/src/main/native/PVRMonitor/: CMakeLists.txt  CPUMetrics.h  PVRScopeHUD.cpp  PVRScopeHUD.h  PVRScopeStats.h  pvrpipe.cpp  pvrpipe.h
background/app/src/main/native/Perfcounter/: CMakeLists.txt  adrenopipe.cpp  adrenopipe.h
background/app/src/main/native/Perfcounter/lib/gpu/adreno/: CMakeLists.txt  a5xx.c  a5xx.h  a6xx.c  a6xx.h  common.c  common.h  context.c  context.h
background/app/src/main/native/Wrapper/: JniWrapper.cpp
background/app/src/main/res/values/: strings.xml  themes.xml
background/app/src/main/res/values-night/: themes.xml
background/app/src/test/java/com/unity/uprtech/: ExampleUnitTest.java
background/gradle/wrapper/: gradle-wrapper.properties
js/: Director.js
js/base/: Resources.js
js/player/: question.js
js/runtime/: background.js
js/scene/: homeScene.js  phoneScene.js
js/utils/: index.js
